# agentenv-posttraining-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: core-repro-smoke.yml
configs/decoding/: greedy_1024.yaml  greedy_8192.yaml  (+5 more)
docs/: attempt_status_taxonomy.md  construct_validity_v0.md  eval_quality_gate.md  heldout_evaluation_protocol.md  model_interface.md  post_training_data_contract.md  progressive_eval_task_suite.md  reproducibility.md  reward_design_v0.md  sandbox_invariants_v0.md  scoping.md  scoring_contract.md  task_authoring_checklist.md  task_design_note_v0.md  trace_schema.md
references/: agentic_evaluation_12_week_execution_manual.md
scripts/: generate_agent_task_controls.py  generate_scorer_control_patch.py  reproduce_core_smoke.sh
tests/: conftest.py  test_agent_control_scripts.py  test_agent_task_run.py  test_artifact_manifests.py  test_artifact_payloads.py  test_artifacts.py  test_attempt.py  test_attempt_io.py  test_cli.py  test_command_runner.py  test_controls_reporting.py  test_controls_run.py  test_diff_runner.py  test_eval_run.py  test_eval_task_hash_compare.py  test_harness_audit_layer_manifests.py  test_harness_audit_runner.py  test_harness_audit_schema.py  test_hashing.py  test_heldout_freeze.py  test_hidden_scorer.py  test_ids.py  test_local_repo_env.py  test_patch_runner.py  test_progressive_dev_tasks.py  test_public_check_idempotency_runner.py  test_public_check_idempotency_schema.py  test_public_check_output_normalizer.py  test_public_checks.py  test_replay.py  test_reporting.py  test_secret_protection.py  test_task_hashing.py  test_task_manifest.py  test_task_splits.py  test_trace_schema.py
(+2767 files in other folders)
