[project]
name = "agentenv-posttraining-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kshitij.gupta", email = "kshitijg1992@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jinja2==3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "transformers==4.57.3",
    "typer>=0.26.7",
    "xxhash>=3.7.0",
]

[project.scripts]
agentenv = "agentenv.cli:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agentenv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["data", "experiments"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
]
